app/src/main/java/com/example/tinkoffnewsmvp/core_ui/error/ErrorMessage.kt
package com.example.tinkoffnewsmvp.core_ui.error

class ErrorMessage(
    val message: String,
    private val error: Throwable?
)